$Id$

Version ?.?.?, released ????-??-??
----------------------------------
Git commit: ?????

Heads up!
~~~~~~~~~
- Changed emitter command line argument from "-e" to "-E"! See pull 
  request #30 - "-e" is now for command line code evaluation.
  (friebe)

RFCs
~~~~
- Implemented RFC #0238: xcc -e and xcc -w (command line code evaluation)
  (friebe)

Bugfixes
~~~~~~~~
- Fixed bug in PHP syntax with concatenation operator precedence
  (friebe)
- Fixed issue #31: Backslash in XP Language not considered a syntax error
  (friebe)

Features
~~~~~~~~
- Added command line option "-q" which will show only compilation errors
  (friebe)


Version 1.10.0, released 2013-05-12
-----------------------------------
Git commit: a50a7ea22e49431a6698564d0311097fe30871fb

Heads up!
~~~~~~~~~
- Changed tests using `foreach` to use @values annotation. Requires 
  parameterized unittest feature (RFC #0267) and thus XP 5.9.1
  (friebe)
- Converted the code base to namespaces
  (friebe)

RFCs
~~~~
- Implemented RFC #0252: Fluent interface compact syntax
  (friebe)
- Implemented RFC #0241: Compact method syntax
  (friebe)
- Implemented RFC #0240: Compact assignment syntax
  (friebe)

Bugfixes
~~~~~~~~
- Fixed issue #25: Resolving abstract enum members fails
  (friebe)
- Fixed various errors resulting from the conversion of the code base 
  to namespaces. Most typical: catch (Throwable $e) not catching any-
  thing, because the name "Throwable" is not present in this namespace.
  (friebe)
- Fixed issue #24: Fatal error with PHP 5.3.0
  (friebe)
- Fixed PHP 5.3 namespaces fully qualified class names
  (friebe)
- Changed TypeReflection to determine enum member type correctly
  See pull request #23
  (friebe)

Features
~~~~~~~~
- Implemented the navigation operator `?.` - see pull request #13
  (friebe)


Version 1.9.0, released 2013-05-05
----------------------------------
Git commit: 3dbbcbe2bdda440d35221ec17d98a025a2b42b54

Heads up!
~~~~~~~~~