@@ -24,7 +24,7 @@ class Constructor extends \lang\Object {
     return sprintf(
       '%s<%s __construct(%s)>',
       $this->getClassName(),
-      implode(' ', Modifiers::namesOf($this->modifiers)),
+      implode(' ', \lang\reflect\Modifiers::namesOf($this->modifiers)),
       substr($signature, 2)
     );
   }
