@@ -38,7 +38,7 @@ class Property extends \lang\Object {
     return sprintf(
       '%s<%s %s %s>',
       $this->getClassName(),
-      implode(' ', Modifiers::namesOf($this->modifiers)),
+      implode(' ', \lang\reflect\Modifiers::namesOf($this->modifiers)),
       $this->type->compoundName(),
       $this->name
     );
